--- a/garmax/Gemfile
+++ b/garmax/Gemfile
@@ -62,3 +62,6 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 
 gem 'trix-rails', require: 'trix'
+
+gem 'will_paginate', '~> 3.1.0'
+gem 'will_paginate-bootstrap'
